# langgraph_academy

./: .gitignore  README.md  create_ollama_models.sh  docker-compose.yml  langgraph.json  pyproject.toml
langgraph_academy/module_1/chain/: chain.py
langgraph_academy/module_1/l1_simple/: simple.ipynb
langgraph_academy/module_1/l2_chain/: chain.ipynb
langgraph_academy/module_1/l3_router/: router.py
langgraph_academy/module_1/l4_agent/: agent.ipynb  agent.py
langgraph_academy/module_1/l5_agent_memory/: agent_memory.ipynb
langgraph_academy/module_1/l6_deployment/: deployment.ipynb
langgraph_academy/module_1/router/: router.ipynb
langgraph_academy/module_1/simple/: simple.py
langgraph_academy/module_2/: l1_state_schema.ipynb
langgraph_academy/module_2/l2_state_reducer/: state_reducer.ipynb
langgraph_academy/module_2/l3_multiple_schemas/: multiple_schemas.ipynb
langgraph_academy/module_2/l4_filter_trim/: filter_trim.ipynb
langgraph_academy/module_2/l5_summarization/: summarization.ipynb
langgraph_academy/module_2/l6_external_memory/: external_memory.ipynb
langgraph_academy/module_3/l1_streaming/: streaming.ipynb
langgraph_academy/module_3/l2_breakpoints/: breakpoints.ipynb
langgraph_academy/module_3/l3_edit_state/: edit_state.ipynb  edit_state.py
langgraph_academy/module_3/l4_dynamic_breakpoints/: dynamic_breakpoints.ipynb  dynamic_breakpoints.py
langgraph_academy/module_3/l5_time_travel/: time_travel.ipynb
langgraph_academy/module_4/l1_parallelization/: parallelization.ipynb  parallelization.py
langgraph_academy/module_4/l2_subgraph/: subgraph.ipynb
langgraph_academy/module_4/l3_map_reduce/: map_reduce.ipynb
models/: Modelfile
(+1 files in other folders)
