[tool.poetry]
name = "langgraph-academy"
version = "0.1.0"
description = "This is a tutorial from official Langchain Academy"
authors = ["Guilherme M. Toso <gui.m.toso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
