[tool.poetry]
name = "langgraph-academy"
version = "0.1.0"
description = "This is a tutorial from official Langchain Academy"
authors = ["Guilherme M. Toso <gui.m.toso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.13"
langgraph = "^0.2.60"
langchain-ollama = "^0.2.2"
langchain-community = "^0.3.13"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
