[tool.poetry]
name = "langgraph-academy"
version = "0.1.0"
description = "This is a tutorial from official Langchain Academy"
authors = ["Guilherme M. Toso <gui.m.toso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.13"
langgraph = "^0.2.60"
langchain-ollama = "^0.2.2"
langchain-community = "^0.3.13"
pytest = "^8.3.4"
ipykernel = "^6.29.5"
langgraph-checkpoint-sqlite = "^2.0.1"
langsmith = "^0.2.6"
notebook = "^7.3.2"
tavily-python = "^0.5.0"
wikipedia = "^1.4.0"
langgraph-cli = {extras = ["inmem"], version = "^0.1.65"}
langchain-core = "^0.3.28"
langgraph-sdk = "^0.1.48"
transformers = "^4.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
